cabal-version:  2.2
name:           tournament
version:        0.1.0.0
author:         Jakub Zárybnický
maintainer:     jakub@zarybnicky.com
copyright:      2019 Jakub Zárybnický
license:        BSD-3-Clause
build-type:     Simple

common shared
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs
                      -fwrite-ide-info
                      -hiedir=.hie
library
  import: shared
  hs-source-dirs:      src
  exposed-modules:     Olymp.Tournament.API
                       Olymp.Tournament.Base

  build-depends:       base >=4.7 && <5
                     , data-fix
                     , directory
                     , lens
                     , recursion-schemes
                     , servant-server
                     , servant-websockets
                     , wai
                     , warp
                     , websockets
